src/main/java/com/example/event/error/LocationDoesNotExistException.java
package com.example.event.error;

public class LocationDoesNotExistException extends Exception{
    public LocationDoesNotExistException(String message) {
        super(message);
    }
}
